# inkotter

./: .gitignore  CONTRIBUTING.md  INFO_FOR_AI.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  INSTALLATION.md  MIGRATION_FROM_TINYTHERMAL_RFCOMM.md  PROTOCOL_FACTS.md
packaging/linux/: inkotter.desktop  install-local.sh
src/inkotter/: __init__.py
src/inkotter/app/: cli.py  gui.py
src/inkotter/app/i18n/: de.json  en.json
src/inkotter/core/: __init__.py  document.py  job.py  layout.py  raster.py  render.py  service.py
src/inkotter/devices/: __init__.py  base.py
src/inkotter/devices/katasymbol_e10/: __init__.py  layout.py  profile.py  protocol.py  transport.py
src/inkotter/protocol/: __init__.py  btbuf.py  frames.py  lzma_codec.py
src/inkotter/transport/: __init__.py  bluetooth.py  errors.py  rfcomm.py
tests/: test_bluetooth_transport.py  test_print_pipeline.py  test_transport_errors.py
